add css to the last two sections and the credits

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Landing Page Project</title>
+    <title>Cats are awesome!</title>
 </head>
 
 <body>
@@ -20,53 +20,66 @@
     </header>
 
     <section class="hero">
-        <div class="hero-content"><h1 class="hero-header">Cats are Awesome</h1>
-            <!-- TODO write Hero content -->
-            <p class="hero-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quos repudiandae ullam? Molestias distinctio voluptatibus debitis aliquid provident commodi, neque nihil ipsa quidem laboriosam accusamus doloribus exercitationem qui similique. Vitae, sapiente voluptatum? Facere inventore tempore veritatis aut adipisci autem obcaecati. So join us</p>
-            <button>Sign up</button></div>
-        
+        <div class="hero-content">
+            <h1 class="hero-header">Cats are Awesome</h1>
+            <p class="hero-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quos repudiandae
+                ullam? Molestias distinctio voluptatibus debitis aliquid provident commodi, neque nihil ipsa quidem
+                laboriosam accusamus doloribus exercitationem qui similique. Vitae, sapiente voluptatum? Facere
+                inventore tempore veritatis aut adipisci autem obcaecati. So join us</p>
+            <button class="button">Sign up</button>
+        </div>
+
         <img src="./images/hero.svg" alt="here goes an image">
     </section>
 
     <section class="information">
         <h2 id="why?" class="information-header">Because</h2>
         <div class="card-wrapper">
-            <!-- TODO write card content-->
             <div class="card">
                 <img class="card-img" src="./images/security.svg" alt="">
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus porro cupiditate culpa laboriosam fugit nostrum animi possimus eaque voluptas! Eius.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus porro
+                    cupiditate culpa laboriosam fugit nostrum animi possimus eaque voluptas! Eius.</p>
             </div>
             <div class="card">
                 <img class="card-img" src="./images/trust.svg" alt="">
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eum dolores nam enim id fugiat dolor quam modi? Dolorem commodi nisi dolorum accusantium soluta quidem?</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eum dolores nam
+                    enim id fugiat dolor quam modi? Dolorem commodi nisi dolorum accusantium soluta quidem?</p>
             </div>
             <div class="card">
                 <img class="card-img" src="./images/compromise.svg" alt="">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam modi porro ab commodi cumque, aut voluptatibus quasi libero aliquam eaque.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam modi porro ab commodi
+                    cumque, aut voluptatibus quasi libero aliquam eaque.</p>
             </div>
             <div class="card">
                 <img class="card-img" src="./images/vision.svg" alt="">
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quod totam atque molestiae, a quasi eaque, rem autem doloribus fuga, eum sit dignissimos non error et?</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quod totam atque
+                    molestiae, a quasi eaque, rem autem doloribus fuga, eum sit dignissimos non error et?</p>
             </div>
         </div>
     </section>
 
-    <section id="read-this">
-        <!-- TODO inspiring quote or testimonial -->
+    <section id="read-this" class="testimonials">
 
-        <!-- “Perhaps one reason we are fascinated by cats is because such a small animal can contain so much independence, dignity, and freedom of spirit. Unlike the dog, the cat's personality is never bet on a human's. He demands acceptance on his own terms.” - Lloyd Alexander -->
+        <blockquote class="quote"> "Perhaps one reason we are fascinated by cats is because such a small animal can
+            contain so much independence, dignity, and freedom of spirit. Unlike the dog, the cat's personality is never
+            bet on a human's. He demands acceptance on his own terms." <strong class="author">- Lloyd Alexander</strong>
+        </blockquote>
     </section>
 
-    <section>
-        <div>
-            <h3>Call to action</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit laborum ratione deserunt possimus ipsam? Distinctio in voluptas sunt veniam dolore.</p>
-            <button>Sign up</button>
+    <section class="call-to-action">
+        <div class="call-to-action-wrapper">
+            <div class="call-to-action-content">
+                <h3 class="call-to-action-header">Join us!!!</h3>
+                <p class="call-to-action-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit laborum
+                    ratione deserunt possimus ipsam? Distinctio in voluptas sunt veniam dolore.</p>
+            </div>
+
+            <button class="button call-to-action-button">Sign up</button>
         </div>
     </section>
 
     <footer id="credits" class="footer">
-        <p>copyright &copy; Khyaran 2023</p>
+        <p>copyright &copy; <a href="">Khyaran</a> 2023</p>
         <p>All the illustrations used on this project were designed by <a href="https://linktr.ee/catalystvibes"
                 target="_blank">Catalys Labs</a>, and downloaded from <a
                 href="https://www.freepik.com/author/catalyststuff" target="_blank">freepik</a></p>
