fix minor details

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <footer id="credits" class="footer">
-        <p>copyright &copy; <a href="">Khyaran</a> 2023</p>
+        <p>copyright &copy; <a href="https://github.com/Khyaran">Khyaran</a> 2023</p>
         <p>All the illustrations used on this project were designed by <a href="https://linktr.ee/catalystvibes"
                 target="_blank">Catalys Labs</a>, and downloaded from <a
                 href="https://www.freepik.com/author/catalyststuff" target="_blank">freepik</a></p>
